--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,25 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Seyun Lee (yatapboy)
+tagline:             'Multi-Modal Researcher'
+description:         'Multi-Modal, 3D Vision(Pose) Researcher'
+url:                 http://yatapboy.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name: SeyunLee
+  description: Multi-Modal Research Scientist, Seyun Lee
+  gravatar: 5bb7cba330e35966e73091db30c0338b # md5 hash of your email address
+  contact:
+    linkedin: https://www.linkedin.com/in/seyun-lee-856106185
+    github: https://github.com/LEESEYUN
+    # facebook: https://www.facebook.com/yenarue
+    # twitter:   https://twitter.com/Li_Zhihao
+    # weibo:     http://weibo.com/41173780
+    email: yatapboy@gmail.com
+
 
 # Gems
 plugins:
