--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               Seyun Lee (yatapboy)
 tagline:             'Multi-Modal Researcher'
 description:         'Multi-Modal, 3D Vision(Pose) Researcher'
-url:                 http://yatapboy.github.io
+url:                 http://leeseyun.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
