--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,94 @@
-# Setup
-title:               Seyun Lee (yatapboy)
-tagline:             'Multi-Modal Researcher'
-description:         'Multi-Modal, 3D Vision(Pose) Researcher'
-url:                 http://leeseyun.github.io
-baseurl:             ''
-paginate:            5
-permalink:           pretty
+# Site Info
+title: Yenarue's Log
+tagline: 'Generalist Software Engineer :-)'
+description: '제너럴리스트를 꿈꾸는 SW개발자의 블로그🙌🏻'
+baseurl: ''
+url: http://leeseyun.github.io
+logo: ''
+
+# Site configurations
+gems:
+  - jekyll-paginate
+markdown: kramdown
+kramdown:
+  input: GFM
+  hard_wrap: true
+excerpt_separator: '<!-- more -->'
+sass:
+  style: compressed
+  sass_dir: _scss
+paginate: 5
+#paginate_path: '/blog/page:num'
+permalink: pretty
+
+version: 1.1.0
 
 # About/contact
 author:
-  name: SeyunLee
-  description: Multi-Modal Research Scientist, Seyun Lee
+  name: Yenarue
+  description: <strong>제너럴리스트</strong>를 꿈꾸는 SW개발자👩🏻‍💻, 김예나(Yenarue) 입니다.
   gravatar: 5bb7cba330e35966e73091db30c0338b # md5 hash of your email address
-  contact:
-    linkedin: https://www.linkedin.com/in/seyun-lee-856106185
-    github: https://github.com/LEESEYUN
-    # facebook: https://www.facebook.com/yenarue
-    # twitter:   https://twitter.com/Li_Zhihao
-    # weibo:     http://weibo.com/41173780
-    email: yatapboy@gmail.com
 
 
-# Gems
+# Navigation (2nd level links supported)
+nav:
+  Home:
+    - '/'
+    - { Yearly: '/blog/archive/' }
+    - { Categories: '/blog/categories/' }
+    - { Tags: '/blog/tags/' }
+  About:
+    - '/about/'
+  Github Project:
+    - 'https://github.com/yenarue/yenarue.github.io'
+
+# Where are tags and categories displayed
+tag_page: '/blog/tags/'
+category_page: '/blog/categories/'
+
+hero:
+  image: /public/img/we_will_be_giants_by_yalestewart.jpg
+  caption: Original Artwork &copy; <a href="http://yalestewart.deviantart.com/art/We-Will-Be-Giants-370176475">Yale Stewart</a>
+
+# Puglins
+mathjax: true # whether support mathjax
+google_analytics_token: 'UA-118279749-1' # leave blank if you don't want google analytics
+disqus_short_name: 'yenarue-dev-blog' # leave blank if you don't want disqus
+
 plugins:
-  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-gist
 
-# Custom vars
-version:             1.1.0
-google_analytics_id: #UA-XXXX-Y
+
+## Setup
+#title:               Seyun Lee (yatapboy)
+#tagline:             'Multi-Modal Researcher'
+#description:         'Multi-Modal, 3D Vision(Pose) Researcher'
+#url:                 http://leeseyun.github.io
+#baseurl:             ''
+#paginate:            5
+#permalink:           pretty
+#
+## About/contact
+#author:
+#  name: SeyunLee
+#  description: Multi-Modal Research Scientist, Seyun Lee
+#  gravatar: 5bb7cba330e35966e73091db30c0338b # md5 hash of your email address
+#  contact:
+#    linkedin: https://www.linkedin.com/in/seyun-lee-856106185
+#    github: https://github.com/LEESEYUN
+#    # facebook: https://www.facebook.com/yenarue
+#    # twitter:   https://twitter.com/Li_Zhihao
+#    # weibo:     http://weibo.com/41173780
+#    email: yatapboy@gmail.com
+#
+#
+## Gems
+#plugins:
+#  - jekyll-paginate
+#
+## Custom vars
+#version:             1.1.0
+#google_analytics_id: #UA-XXXX-Y
